re-thnking project structure/layout

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,7 +10,8 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  max-height: 12vh;
+  min-height: 80px;
   display: flex;
   flex-direction: column;
   align-items: center;
